--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             display: flex;
             flex-direction: row;
             border-radius: 8px;
-            margin-bottom: 8px;
+            margin-top: 8px;
             color: white;
         }
         .link-icon-holder {
